<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity"
    android:id="@+id/relativeLayout2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:contentDescription="TODO"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coin"
        tools:ignore="ContentDescription,HardcodedText" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="#023a5e7a"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412"
        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="#063a5e7a"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="104dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Sign Up"
                android:textColor="#fff"
                android:textSize="18dp"
                tools:ignore="HardcodedText,SpUsage" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Already have a account? Sign in here!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText" />
</android.support.constraint.ConstraintLayout>